# openaptx

./: configure.ac
src/: Makefile.am  bt-aptx-ffmpeg.c  bt-aptx-stub.c
utils/: Makefile.am
